Finished Tonis Part

--- a/EBIS/Protokoll/EBIS_Protokoll_experiment.tex
+++ b/EBIS/Protokoll/EBIS_Protokoll_experiment.tex
@@ -68,20 +68,21 @@
 		%	\label{tab:data_fit}
 		%\end{table}
 	\subsection{Einfluss des Drucks auf die Ionenzustände im Strahlkanal}
-		Um den Einfluss des Arbeitsdrucks im Niederenergiestrahlkanal zu untersuchen, wurden zwei weitere Übersichtsspektren mit gleicher Ionisationszeit von $t_ion = \unit[380]{ms}$ und Messzeit von $t_{mess} = \unit[2000]{ms}$ (5 Zyklen), aber mit verschiedenen Drücken aufgenommen. Abbildung \ref{fig:all} zeigt dabei den direkten Vergleich vom Spektrum mit niedrigem Arbeitsdruck $p_1 = \unit[2\cdot 10^{-9}]{mbar}$ (rot) und hohem Arbeitsdruck $p_2 = \unit[5\cdot 10^{-8}]{mbar}$ (blau).
+		Um den Einfluss des Arbeitsdrucks im Niederenergiestrahlkanal zu untersuchen, wurden zwei weitere Übersichtsspektren mit gleicher Ionisationszeit von $t_{ion} = \unit[380]{ms}$ und Messzeit von $t_{mess} = \unit[2000]{ms}$ (5 Zyklen), aber mit verschiedenen Drücken aufgenommen. Abbildung \ref{fig:all} zeigt dabei den direkten Vergleich vom Spektrum mit niedrigem Arbeitsdruck $p_1 = \unit[2\cdot 10^{-9}]{mbar}$ (rot) und hohem Arbeitsdruck $p_2 = \unit[5\cdot 10^{-8}]{mbar}$ (blau).\\
 		\begin{figure}[htb]
 			\centering
 			\includegraphics[width=\linewidth]{pic/all_beschriftet.png}
 			\caption{Übersichtsspektrum mit $t_ion = \unit[380]{ms}$ unter verschiedenen Drücken $p_1 = \unit[2\cdot 10^{-9}]{mbar}$ (rot) und $p_2 = \unit[5\cdot 10^{-8}]{mbar}$ (blau). In blau beschriftete Peaks kennzeichnen mögliche Fremdionen im Strahlkanal.}
 			\label{fig:all}	
 		\end{figure}
-		Es fällt auf, dass bei niedrigen Drücken ein viel geringerer Ionenstrom durch die Anlage fließt und somit am Faradaycup weniger Ladung pro Zeiteinheit nachgewiesen wird. Die kinetische Gastheorie liefert einen Zugang, um dies zu verstehen: Druck ist ein Maß für die Kraft, die Gasmoleküle auf die Gefäßwand ausüben. Je niedriger der Druck, desto weniger Kollisionen der Teilchen gibt es mit der Gefäßwand und auch untereinander. Dies führt zu einer geringeren mittleren Geschwindigkeit der Gasteilchen und somit zu einer geringeren Stromdichte $j = n\cdot Q \cdot v$, welche am Faradaycup als Ladung pro Zeiteinheit und Fläche nachgewiesen wird. Doch warum tritt diese Absenkung nur bei mittleren Ionenzuständen (Ar$^{12+}$ bis Ar$^{15+}$) auf? Dies kann über die Verringerung des \textit{Ladungsaustauschs} zwischen den Ionen erklärt werden. Hohe Ionisationszustände sind energetisch ungünstig für Atome, somit versuchen sie bei Zusammenstößen untereinander die Anregung gleichmäßig zu verteilen, wobei folgende Reaktion stattfindet:
-		\begin{equation}
-			X^{q} + X^{p} \rightarrow X^{q+1} + X^{p-1}.
-		\end{equation}
-		Die Häufigkeit dieses Prozesses sinkt bei niedrigem Druck, wodurch hochgeladene Ionen begünstigt werden. In Abbildung \ref{fig:all} ist bei etwa $\unit[51]{mT}$ ein roter Peak deutlich zu sehen. Diesen könnte man naiverweise aufgrund des niedrigen Drucks dem höchst angeregten Argonzustand Ar$^{18+}$ zuordnen. Das ist aber nicht der Fall, da der theoretische Wert des zugehörigen Magnetfeldes bei $\unit[50,4]{mT}$ liegt und dieses Teilchen somit aussortiert würde. Man kann spekulieren, ob der Peak zu einem höchst angeregten Fremdion aus dem Strahlkanal gehört. Ein Atom, bei dem diese Zuordnung hervorragend funktioniert, ist Sauerstoff mit einer Masse von $m_O = \unit[16]{u}$. Der Peak von O$^{6+}$ fällt mit Argon zusammen und O$^{7+}$ ist genau an der erwarteten Position.\\
-		Bei hohem Druck ist nicht nur die mittlere Geschwindigkeit, sondern auch die Teilchenzahl und somit auch die Zahl an Fremdatomen im Strahlkanal deutlich höher. Da der Ladungsaustausch nun begünstigt wird und zudem der Ionenstrom größer ist, treten Peaks von gering angeregten Fremdionen als Untergrundrauschen vor allem im Bereich hoher Magnetfelder auf. das führt dazu, dass mittlere Argonionisationszustände teilweise im Rauschen verschwinden. In der Abbildung wurde ein Versuch unternommen, mögliche Fremdionen mit Saustoff-, Stickstoff- und Kohlenstoffatomen zu identifizieren, dies ist allerdings rein spekulativ, da die Peaks nur sehr klein sind und man zu noch höheren Magnetfeldern hätte übergehen müssen. Außerdem fallen viele Peaks aufgrund gleicher spezifischer Ladung $Q/m$ zusammen. Da die Anzahl der Ionen proportional zur am Faradaycup gemessenen Ladung ist, erhält man durch Verhältnisbildung eine grobe Abschätzung über die Anzahl der Fremdatome. Dafür sucht man Peaks, die mit keinem anderen Fremdatom zusammenfallen und die nach Möglichkeit dem am häufigsten auftretenden Ionenzustand entsprechen, z.B. von O$^{7+}$ und Ar$^{16+}$.
+		\ \\
+		Es fällt auf, dass bei \textbf{niedrigen Drücken} ein viel geringerer Ionenstrom durch die Anlage fließt und somit am Faradaycup weniger Ladung pro Zeiteinheit nachgewiesen wird. Die kinetische Gastheorie liefert einen Zugang, um dies zu verstehen: Druck ist ein Maß für die Kraft, die Gasmoleküle auf die Gefäßwand ausüben. Je niedriger der Druck, desto weniger Kollisionen der Teilchen gibt es mit der Gefäßwand und auch untereinander. Dies führt zu einer geringeren mittleren Geschwindigkeit der Gasteilchen und somit zu einer geringeren Stromdichte $j = n\cdot Q \cdot v$, welche am Faradaycup als Ladung pro Zeiteinheit und Fläche nachgewiesen wird. Doch warum tritt diese Absenkung hauptsächlich bei mittleren Ionenzuständen (Ar$^{13+}$ bis Ar$^{15+}$) auf? Dies kann über die Verringerung des \textit{Ladungsaustauschs} zwischen den Ionen, der in Abschnitt \ref{sec:ww} näher erläutert wird, begründet werden. Die Häufigkeit dieses Prozesses sinkt bei niedrigem Druck, wodurch hochgeladene Ionen begünstigt werden und die Absenkung des Ionenstroms kompensiert wird.\\
+		In Abbildung \ref{fig:all} ist bei etwa $\unit[51]{mT}$ ein roter Peak deutlich zu sehen. Diesen könnte man naiverweise aufgrund des niedrigen Drucks dem höchst angeregten Argonzustand Ar$^{18+}$ zuordnen. Das ist allerdings nicht der Fall, da die Theorie diesen bei etwa $\unit[50,4]{mT}$ erwarten würde. Man kann spekulieren, ob der Peak zu einem höchst angeregten Fremdion aus dem Strahlkanal gehört. Ein Atom, bei dem diese Zuordnung hervorragend funktioniert, ist Sauerstoff mit einer Masse von $m_O = \unit[16]{u}$. Der Peak zu O$^{7+}$ ist genau an der erwarteten Position und auch sonstige Maxima des Sauerstoffs passen sehr gut in das gemessene Spektrum herein, fallen aber teilweise mit denen des Argons zusammen.\\
+		Bei \textbf{hohem Druck} ist nicht nur die mittlere Geschwindigkeit, sondern auch die Teilchenzahl und somit auch die Zahl an Fremdatomen im Strahlkanal deutlich höher. Da der Ladungsaustausch nun begünstigt wird und zudem der Ionenstrom größer ist, treten Peaks von gering angeregten Fremdionen als starkes Untergrundrauschen vor allem im Bereich hoher Magnetfelder auf. Das führt dazu, dass mittlere und niedrige Argonionisationszustände, die durch die hohe Ionisationszeit ohnehin unterdrückt sind, nicht mehr sauber herausgeefiltert werden können. In Abbildung \ref{fig:all} wurde ein Versuch unternommen, mögliche Fremdionen mit Saustoff-, Stickstoff- und Kohlenstoffatomen zu identifizieren. Dies ist allerdings rein spekulativ, da die Peaks nur sehr klein sind und man zu noch höheren Magnetfeldern hätte übergehen müssen. Außerdem fallen viele Maxima aufgrund gleicher spezifischer Ladung $Q/m$ zusammen, wodurch keine eindeutige Zuordnung möglich ist.\\
+		Da die Anzahl der Ionen proportional zur am Faradaycup gemessenen Ladung ist, erhält man durch Verhältnisbildung eine grobe Abschätzung der Anzahl an Fremdatomen. Dafür sucht man Peaks, die mit keinem anderen Fremdatom zusammenfallen und die nach Möglichkeit dem am häufigsten auftretenden Ionenzustand entsprechen, z.B. von O$^{7+}$ und Ar$^{16+}$.
 		\begin{equation}
 			\frac{N_{O}}{N_{Ar}} = \frac{Q(\text{O}^{7+})}{Q(\text{Ar}^{16+})}\approx \unit[15,4]{\%}
 		\end{equation}
 		Das heißt, es befindet sich tatsächlich noch ein signifikanter Anteil an Fremdatomen im Strahlkanal, der mit den untersuchten Ionen wechselwirkt.
+		
+		%TODO@Christian: Zeitentwicklungen
