--- a/EBIS/Protokoll/EBIS_Protokoll_main.tex
+++ b/EBIS/Protokoll/EBIS_Protokoll_main.tex
@@ -31,7 +31,7 @@
 
 \input{EBIS_Protokoll_intro}			% Physikalischer Hintergrund
 \input{EBIS_Protokoll_experiment}		% Durchführung
-\input{EBIS_Protokoll_ausw}				% Auswertung
+%\input{EBIS_Protokoll_ausw}				% Auswertung
 \input{EBIS_Protokoll_diskussion}		% Diskussion
 \include{EBIS_Protokoll_literatur}
 
