--- a/EBIS/Protokoll/EBIS_Protokoll_diskussion.tex
+++ b/EBIS/Protokoll/EBIS_Protokoll_diskussion.tex
@@ -1,1 +1,5 @@
 \section{Diskussion und Zusammenfassung}
+	Im Experiment wurde die Abhängigkeit der Ionisationszustände Ar$^{8+}$ bis Ar$^{17+}$ in der EBIS von der Ionisationszeit und dem im Strahlkanal vorherrschenden Druck untersucht. Zu diesem Zweck wurden im ersten Versuchsteil Übersichtsspektren, die die am Faradaycup gemessene Ladung $Q(B)$ in Abhängigkeit vom Dipol-Magnetfeld $B$ darstellen, bei verschiedenen Drücken und konstanter Ionisationszeit aufgenommen. Dabei wurden zwei Effekte bei steigendem Druck beobachtet: Zum einen erhöht sich der Ionenstrom und somit die nachgewiesene Ladung, da die mittlere Geschwindigkeit der Teilchen zunimmt und zum anderen wird der Einfluss des Ladungsaustausches größer, wodurch höhere Ionisationszustände unterdrückt werden. Dies führte dazu, dass die Fremdatome (vor allem Sauerstoff) im Strahlkanal ein starkes Untergrundrauschen erzeugt haben. Will man somit besonders hohe Ionisationszustände erreichen, muss der Druck bzw. die mittlere Energie der Teilchen im Kanal herabgesetzt werden. Eine Möglichkeit dafür stellt die sogenannte \textbf{Ionenkühlung} dar, bei der leichte Fremdionen im Potentialtopf gebunden werden, welche die Energie der schweren Ionen aufnehmen und die Falle dabei verlassen. Dadurch wird dem System kontinuierlich Energie entzogen - die Ionen werden gekühlt - und sie verbleiben länger im Quellvolumen, sodass höhere Ladungszustände erreicht werden können. Diese Möglichkeit ist vor allem für sehr schwere Kerne wie Uran essentiell nutzbar. \cite{PA}\\
+	Weiterhin wurde mit Hilfe der Übersichtsspektren die Theorie der Ablenkung geladener Teilchen im Magnetfeld des Dipol-Magneten sehr gut bestätigt, da die mit Formel (\ref{eq:radius}) berechneten Magnetfelder sehr gut mit dem quadratischen Fit aus Abbildung \ref{fig:quadr_fit} korrespondieren.\\
+	
+	%TODO:Christians Diskussion
