wrote down tasks

--- a/EBIS/Protokoll/EBIS_Protokoll_experiment.tex
+++ b/EBIS/Protokoll/EBIS_Protokoll_experiment.tex
@@ -85,4 +85,16 @@
 		\end{equation}
 		Das heißt, es befindet sich tatsächlich noch ein signifikanter Anteil an Fremdatomen im Strahlkanal, der mit den untersuchten Ionen wechselwirkt.
 		
-		%TODO@Christian: Zeitentwicklungen
+	\subsection{Einfluss der Ionisationszeit auf die Ladungszustandsverteilung und Erzeugung}
+        \begin{figure}[htbp]
+            \subfigure[Peaks der Zustände 8+ bis 11+\label{timeds}]{\includegraphics[scale=0.25]{pic/schmalePeaks.png}}
+            \subfigure[Peaks der Zustände 12+ bis 17+\label{timedw}]{\includegraphics[scale=0.25]{pic/breitePeaks.png}}
+            \caption{Einfluss der Ionisationszeit auf die Erzeugung von Ladung verschiedener Ladungszustände}
+            \label{timed}
+        \end{figure}
+        \begin{figure}[htbp]
+            \includegraphics[scale=0.25]{pic/MaximaFit_relativ.png}
+            \caption{Zeitliche Entwicklung der Ladungszustandsverteilung (Maximum der Zustände)}
+        \end{figure} 
+        
+        %TODO@Christian: Zeitentwicklungen
