--- a/EBIS/Protokoll/EBIS_Protokoll_intro.tex
+++ b/EBIS/Protokoll/EBIS_Protokoll_intro.tex
@@ -1,5 +1,14 @@
 \section{Einführung und Grundlagen}
 	%TODO@Christian: Aufgabenstellung + EBIS Aufbau und Funktionsweise
+    
+    \subsection{Aufgabenstellung}
+    Eine Elektronenstrahlionenquelle (EBIS) ermöglicht die Herstellung und Entnahme hochgeladener Ionen. Damit ist es möglich, die zeitliche Entwicklung von Ladungszuständen zu beobachten, woraus sich Aussagen über die Ionisationseigenschaften des Elektronenstrahls treffen lassen. \\
+    Das Ziel dieses Versuches besteht darin, die Abhängigkeit der Ionisation von Ionisationszeit und Druck in der Ionenquelle zu untersuchen. Dafür werden zunächst die Betriebsparameter der Anlage eingestellt und die Extraktion des Ionenstrahls optimiert.
+    Es folgt die Aufnahme eine Übersichtsspektrums der Ionen Ar$^{8+}$ bis Ar$^{18+}$ bei einer gegebenen, festen Ionisationszeit und einem mittleren Arbeitsdruck.
+    Mit dem gleichen mittleren Druck wird die Zeitentwicklung der Ionenisationszustände 8+ bis 17+ aufgenommen.
+    Danach erfolgt die Messung der Übersichtsspektren bei höherem und niedrigeren Arbeitsdrücken.
+    \subsection{Aufbau und Funktionsweise des EBIS-A}
+    
 	\subsection{Elektrisch geladene Teilchen in einem homogenen Mag\-net\-feld}
 		Um später die verschiedenen elektrisch geladenen Argonionen voneinander trennen zu können, ist im Niederenergiestrahlkanal ein 90°-Dipol-Magnet verbaut, der ein homogones Magnetfeld erzeugt und die Ionen auf eine Kreisbahn zwingt. Im Folgenden soll die Dynamik dieser Bewegung erörtert werden.\\
 		Betrachte dafür ein elektrisch geladenes Teilchen mit Ladung $Q = q\cdot e$ und Masse $m$. Es wurde vorher von einem elektrischen Feld mit einer Spannung $U_B$ auf die Geschwindigkeit $\vec{v}(t=0)=v\vec{e}_x$ beschleunigt und befinde sich anschließend in einem homogenen Magnetfeld $\vec{B} = B \vec{e}_z$. In diesem erfährt es die \textit{Lorentzkraft}:
