inserted tables, pictures, wrote some text

--- a/EBIS/Protokoll/EBIS_Protokoll_experiment.tex
+++ b/EBIS/Protokoll/EBIS_Protokoll_experiment.tex
@@ -86,15 +86,16 @@
 		Das heißt, es befindet sich tatsächlich noch ein signifikanter Anteil an Fremdatomen im Strahlkanal, der mit den untersuchten Ionen wechselwirkt.
 		
 	\subsection{Einfluss der Ionisationszeit auf die Ladungszustandsverteilung und Erzeugung}
+        Um den Einfluss der Ionisationszeit $t_{Ionisation}$ auf auf die Erzeugung von Ladung zu untersuchen, hält man Druck und Ladungszustand jeweils konstant und variiert lediglich die Ionisationszeit. In den folgenden Diagrammen wurde auch die Schrittweite und die minimale sowie die maximale Ionisationszeit variiert. Dies hat vor allem im direkten Vergleich der Abbildungen \ref{timed} Effekte auf die Güte und natürlich auf die Dauer der Messungen. Die zackige Struktur in Abbildung \ref{timeds} resultiert aus Messfehlern, die durch die Messelektronik verursacht werden, wenn diese zwischen verschiedenen Messbereichen hin- und herschaltet. Es kann auch an einer mangelhaften Übergabe der Einstellung der Ionisationszeit an die Steuereinheit liegen. Diese Zackenstruktur ist demnach kein physikalisches Phänomen, sondern kann durch eine Optimierung - wie später in für die Aufnahme der Zeitentwicklungen in Abbildung \ref{timedw} geschehen - vermieden werden.
         \begin{figure}[htbp]
             \subfigure[Peaks der Zustände 8+ bis 11+\label{timeds}]{\includegraphics[scale=0.25]{pic/schmalePeaks.png}}
             \subfigure[Peaks der Zustände 12+ bis 17+\label{timedw}]{\includegraphics[scale=0.25]{pic/breitePeaks.png}}
             \caption{Einfluss der Ionisationszeit auf die Erzeugung von Ladung verschiedener Ladungszustände}
             \label{timed}
         \end{figure}
-        \begin{figure}[htbp]
+        Es ist qualitativ auffällig, dass jede Ionisationsstufe über einen mehr oder weniger ausgeprägten Peak verfügt, der ein Maximum ist. Die Messkurven verlaufen asymmetrisch und steigen links der Maxima wesentlich steiler an als sie rechts fallen. Besonders die niedrigen Ionisationsstufen Ar$^{8+}$ bis Ar$^{10+}$ und Ar$^{12+}$ zeigen rechts der Maxima gut erkennbar konstantes Verhalten. 
             \includegraphics[scale=0.25]{pic/MaximaFit_relativ.png}
             \caption{Zeitliche Entwicklung der Ladungszustandsverteilung (Maximum der Zustände)}
         \end{figure} 
         
-        %TODO@Christian: Zeitentwicklungen
+        
