--- a/EBIS/Protokoll/EBIS_Protokoll_experiment.tex
+++ b/EBIS/Protokoll/EBIS_Protokoll_experiment.tex
@@ -114,11 +114,15 @@
         Es ist qualitativ auffällig, dass jede Ionisationsstufe über einen mehr oder weniger ausgeprägten Peak verfügt. Die Messkurven verlaufen asymmetrisch und steigen links der Maxima wesentlich steiler an als sie rechts fallen. Besonders die niedrigen Ionisationsstufen Ar$^{8+}$ bis Ar$^{10+}$ und Ar$^{12+}$ zeigen rechts der Maxima gut erkennbar nahezu konstantes Verhalten in einiger Entfernung zum Peak. Das bedeutet, das sich mit steigender Ionisationszeit ein Gleichgewicht zwischen Rekombination und Ionisation einstellt.\\
         Qualitativ ist in Abbildung \ref{timed} auch erkennbar, dass die Maxima mit Zunahme der Ionisierung kleiner werden. Ebenso werden die Abstände zwischen den Peaks größer. Diese beiden Beobachtungen sind in Abbildung \ref{maxrel} zusammengetragen dargestellt.\\
         \begin{figure}
-            \includegraphics[scale=0.25]{pic/MaximaFit_relativ.png}
-            \caption{Zeitliche Entwicklung der Ladungszustandsverteilung (Maximum der Zustände)}
-            \label{maxrel}
+            \centering
+            \subfigure[Zeitliche Entwicklung der Ladungszustandsverteilung\label{maxrel}]{\includegraphics[scale=0.25]{pic/MaximaFit_relativ.png}}
+            \subfigure[Maxima der Peaks in Abhängigkeit des Ladungszustandes\label{maxlad}]{\includegraphics[scale=0.452]{pic/LadungszustandsverteilungLinExp.png}}
+            \caption{Maxima über Ionisationszeit und Ladungszustand}
+            \label{max}
         \end{figure} 
-        Hierbei ist anzumerken, dass die Ionisationsstufe mit der Ionisationszeit steigt. Aufgetragen wurden die Maxima der in Abbildung \ref{timed} dargestellten Graphen. Da die Messungen jedoch alle unter verschiedenen Bedingungen stattfanden, insbesondere da die Zyklenzahl verändert wurde, muss man die Höhe der Maxima normieren. In diesem Fall geschah dies relativ. Jedes Maximum ist geteilt durch die pro Ion für alle Ionisationszeiten gemessene Gesamtladung und aufgetragen worden. Daraus entsteht der hier erkennbare exponentielle Abfall mit einem Ausreißer.
+        Hierbei ist anzumerken, dass die Ionisationsstufe mit der Ionisationszeit steigt, was man in Abbildung \ref{maxlad} erkennen kann. Aufgetragen wurden die Maxima der in Abbildung \ref{timed} dargestellten Graphen. Da die Messungen jedoch alle unter verschiedenen Bedingungen stattfanden, insbesondere da die Zyklenzahl verändert wurde, muss man die Höhe der Maxima normieren. In diesem Fall geschah dies relativ. Jedes Maximum ist geteilt durch die pro Ion für alle Ionisationszeiten gemessene Gesamtladung und aufgetragen worden. Daraus entsteht der hier erkennbare exponentielle Abfall mit einem Ausreißer.
         Dieses verhalten ist wiederum mit der steigenden Neigung der Ionen höherer Ordnung zur Rekombination erklärbar. Es dauert ebenfalls länger, höhere Ionisationsstufen herzustellen, wodurch die steigenden Ionisationszeiten für die Maxima erklärt werden können. 
+        
+        
         
         
